--- a/package.json
+++ b/package.json
@@ -1,41 +1,73 @@
 {
-  "name": "policy",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
+  "name": "MicrofrontendApp",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack",
+    "build-prod": "webpack -p",
+    "lint": "eslint ./ClientApp/src/",
+    "test": "jest",
+    "start": "webpack-dev-server --open --mode development"
+  },
+  "author": "Rajesh Burla",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.7.4",
+    "@babel/node": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-react": "^7.7.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
+    "ajv": "^6.10.2",
+    "aspnet-webpack": "^3.0.0",
+    "aspnet-webpack-react": "^4.0.0",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
+    "bootstrap": "^4.3.1",
+    "connected-react-router": "^6.6.1",
+    "cross-env": "^6.0.3",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.7.1",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-plugin-flowtype": "^4.5.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "jest": "^24.9.0",
+    "jquery": "^3.4.1",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0",
-    "react-app-rewire-micro-frontends": "^0.0.1"
-  },
-  "devDependencies": {
-    "react-app-rewired": "^2.1.4",
     "react-hot-loader": "^4.12.18",
-    "node-sass": "^4.13.0",
-    "webpack-cli": "^3.3.10"
+    "react-redux": "^7.1.3",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^1.1.5",
+    "react-test-renderer": "^16.12.0",
+    "reactstrap": "^8.1.1",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-dev-server": "^3.1.4",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "copy-webpack-plugin": "4.5.2"
   },
-  "config-overrides-path": "node_modules/react-app-rewire-micro-frontends",
-  "scripts": {
-    "format": "prettier --write",
-    "start": "react-app-rewired start",
-    "build1": "react-scripts build",
-    "build-pack": "webpack",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@babel/runtime": "^7.7.4",
+    "@babel/runtime-corejs3": "^7.7.4",
+    "core-js": "^3.4.2"
   }
 }
